[gd_scene load_steps=19 format=3 uid="uid://bhnn4ujosmxn2"]

[ext_resource type="PackedScene" uid="uid://blanxw404ynrp" path="res://entities/characters/character_controller.tscn" id="1_ynnd7"]
[ext_resource type="Script" path="res://entities/characters/player.gd" id="2_r3s6i"]
[ext_resource type="Script" path="res://entities/characters/head_bob.gd" id="3_nvf2j"]
[ext_resource type="Script" path="res://scripts/crosshairs.gd" id="4_g7abg"]
[ext_resource type="PackedScene" uid="uid://d3qxicxwvdkhb" path="res://entities/characters/loadout.tscn" id="5_ukyv3"]
[ext_resource type="PackedScene" uid="uid://of7kaimovmq2" path="res://entities/weapons/testgun.tscn" id="6_6nbeb"]
[ext_resource type="Script" path="res://scripts/loadout_item.gd" id="7_pbotc"]
[ext_resource type="PackedScene" uid="uid://cn1acunwyxsj4" path="res://entities/weapons/testgun0.tscn" id="8_0t5ta"]
[ext_resource type="Script" path="res://scripts/loadout_category.gd" id="9_w0hb5"]

[sub_resource type="Curve" id="Curve_k1oxi"]
min_value = -1.0
_data = [Vector2(0.25, -1), 0.0, 0.0, 0, 0, Vector2(0.375, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Animation" id="Animation_dikuy"]
length = 0.001

[sub_resource type="Animation" id="Animation_7so1y"]
resource_name = "idle"
length = 3.0
loop_mode = 1

[sub_resource type="Animation" id="Animation_fueyy"]
resource_name = "move"
loop_mode = 1
step = 0.25

[sub_resource type="Animation" id="Animation_x58x2"]
resource_name = "shoot"
length = 0.4

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pri81"]
_data = {
"RESET": SubResource("Animation_dikuy"),
"idle": SubResource("Animation_7so1y"),
"move": SubResource("Animation_fueyy"),
"shoot": SubResource("Animation_x58x2")
}

[sub_resource type="Resource" id="Resource_tjpfx"]
script = ExtResource("7_pbotc")
slot_name = "Glock"
slot_category = "sidearms"
start_picked_up = false
skip_selection = false
hide_in_menu = false
item_scene = ExtResource("6_6nbeb")

[sub_resource type="Resource" id="Resource_mhaew"]
script = ExtResource("7_pbotc")
slot_name = ""
slot_category = ""
start_picked_up = false
skip_selection = false
hide_in_menu = false
item_scene = ExtResource("8_0t5ta")

[sub_resource type="Resource" id="Resource_gtidv"]
script = ExtResource("9_w0hb5")
category_name = "sidearms"
loadout_items = Array[ExtResource("7_pbotc")]([SubResource("Resource_tjpfx"), SubResource("Resource_mhaew")])
MAX_ITEMS = 0
ignore_start_picked_up = false
no_duplicates = true

[node name="player" instance=ExtResource("1_ynnd7")]
script = ExtResource("2_r3s6i")
ladder_change_dir_curve = SubResource("Curve_k1oxi")
eye_relief = 0.2

[node name="MeshInstance3D" parent="CollisionShape3D" index="0"]
visible = false
layers = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]
libraries = {
"": SubResource("AnimationLibrary_pri81")
}
autoplay = "idle"
playback_default_blend_time = 0.05

[node name="ADS_point" type="Marker3D" parent="torso/head" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.249049)

[node name="Camera3D" type="Camera3D" parent="torso/head" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.1)
cull_mask = 1048573
fov = 90.0
near = 0.001
script = ExtResource("3_nvf2j")
_handler = NodePath("../../..")
_viewmodel_camera = NodePath("HUD/SubViewportContainer/SubViewport/GunCamera")
_mount_point = NodePath("..")
_crosshairs = NodePath("HUD/Crosshairs")

[node name="RayCast3D" type="RayCast3D" parent="torso/head/Camera3D" index="0"]
visible = false
target_position = Vector3(0, 0, -50)
collision_mask = 2

[node name="HUD" type="Control" parent="torso/head/Camera3D" index="1"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Crosshairs" type="Control" parent="torso/head/Camera3D/HUD" index="0"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
script = ExtResource("4_g7abg")
_handler = NodePath("../../../../..")
_loadout = NodePath("../../../../loadout")
CENTER_DOT_ALPHA = 0.5

[node name="center_dot" type="ColorRect" parent="torso/head/Camera3D/HUD/Crosshairs" index="0"]
custom_minimum_size = Vector2(2, 2)
layout_mode = 2
offset_left = 249.0
offset_top = 249.0
offset_right = 251.0
offset_bottom = 251.0
mouse_filter = 1

[node name="top_hair" type="Line2D" parent="torso/head/Camera3D/HUD/Crosshairs" index="1"]
points = PackedVector2Array(250, 250, 250, 230)
width = 2.0
antialiased = true

[node name="bottom_hair" type="Line2D" parent="torso/head/Camera3D/HUD/Crosshairs" index="2"]
points = PackedVector2Array(250, 250, 250, 270)
width = 2.0

[node name="left_hair" type="Line2D" parent="torso/head/Camera3D/HUD/Crosshairs" index="3"]
points = PackedVector2Array(250, 250, 230, 250)
width = 2.0

[node name="right_hair" type="Line2D" parent="torso/head/Camera3D/HUD/Crosshairs" index="4"]
points = PackedVector2Array(250, 250, 270, 250)
width = 2.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="torso/head/Camera3D/HUD" index="1"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="torso/head/Camera3D/HUD/SubViewportContainer" index="0"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 0

[node name="GunCamera" type="Camera3D" parent="torso/head/Camera3D/HUD/SubViewportContainer/SubViewport" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, -0.1)
cull_mask = 2
fov = 90.0
near = 0.001

[node name="shoulder" parent="torso" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.45, 0)

[node name="loadout" parent="torso" index="2" instance=ExtResource("5_ukyv3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.45, 0)
_controller = NodePath("../..")
_mount_point = NodePath("../shoulder")
loadout_categories = Array[ExtResource("9_w0hb5")]([SubResource("Resource_gtidv")])

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
